--- a/jenkins/04_deployment.yml
+++ b/jenkins/04_deployment.yml
@@ -23,8 +23,14 @@ spec:
         volumeMounts:
         - name: jenkins
           mountPath: /var/jenkins_home/
+        - name: docker-socket
+          mountPath: /var/run/docker.sock
       volumes:
         - name: jenkins
           gcePersistentDisk:
             pdName: jenkins
             fsType: ext4
+        - name: docker-socket
+          hostPath:
+            path: /var/run/docker.sock
+            type: File
